k8s/products/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
  namespace: microstore
  labels:
    app: products
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: <TU_REGISTRY>/products:latest
          ports:
            - containerPort: 5003
          readinessProbe:
            httpGet:
              path: /api/products
              port: 5003
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/products
              port: 5003
            initialDelaySeconds: 60
            periodSeconds: 30
