k8s/products/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: microstore
  labels:
    app: products
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5003
      protocol: TCP
  selector:
    app: products
